- Fixed bug #50152 (ReflectionClass::hasProperty hehaves like isset() not property_exists)   [5_2 is OK]

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@290515 c90b9560-bf6c-de11-be94-00142212c4b1